--- a/arch/arm/configs/aries_defconfig
+++ b/arch/arm/configs/aries_defconfig
@@ -503,3 +503,4 @@ CONFIG_SECURITY_NETWORK=y
 CONFIG_LSM_MMAP_MIN_ADDR=4096
 CONFIG_SECURITY_SELINUX=y
 CONFIG_CFG80211_INTERNAL_REGDB=y
+CONFIG_MSM_AVTIMER=y
