--- a/arch/arm/configs/aries_defconfig
+++ b/arch/arm/configs/aries_defconfig
@@ -43,7 +43,6 @@ CONFIG_LGE_CRASH_HANDLER=y
 CONFIG_LGE_QFPROM_INTERFACE=y
 CONFIG_UPDATE_LCDC_LUT=y
 CONFIG_LCD_KCAL=y
-CONFIG_EARJACK_DEBUGGER=y
 # CONFIG_MSM_STACKED_MEMORY is not set
 CONFIG_KERNEL_MSM_CONTIG_MEM_REGION=y
 # CONFIG_MSM_FIQ_SUPPORT is not set
@@ -148,7 +147,7 @@ CONFIG_NF_CONNTRACK_IRC=y
 CONFIG_NF_CONNTRACK_NETBIOS_NS=y
 CONFIG_NF_CONNTRACK_PPTP=y
 CONFIG_NF_CONNTRACK_SANE=y
-#CONFIG_NF_CONNTRACK_SIP is not set
+# CONFIG_NF_CONNTRACK_SIP is not set
 CONFIG_NF_CONNTRACK_TFTP=y
 CONFIG_NF_CT_NETLINK=y
 CONFIG_NETFILTER_TPROXY=y
@@ -233,7 +232,6 @@ CONFIG_BT_HIDP=y
 CONFIG_CFG80211=y
 # CONFIG_CFG80211_WEXT is not set
 CONFIG_RFKILL=y
-CONFIG_BCM2079X=y
 CONFIG_GENLOCK=y
 CONFIG_GENLOCK_MISCDEVICE=y
 CONFIG_SYNC=y
@@ -242,10 +240,9 @@ CONFIG_CONNECTOR=y
 CONFIG_BLK_DEV_LOOP=y
 CONFIG_BLK_DEV_RAM=y
 CONFIG_UID_STAT=y
-CONFIG_ANDROID_VIBRATOR=y
+CONFIG_HAPTIC_ISA1200=y
 CONFIG_QSEECOM=y
 CONFIG_USB_HSIC_SMSC_HUB=y
-CONFIG_SLIMPORT_ANX7808=y
 CONFIG_SCSI=y
 CONFIG_SCSI_TGT=y
 CONFIG_BLK_DEV_SD=y
@@ -301,8 +298,7 @@ CONFIG_INPUT_KEYRESET=y
 CONFIG_KEYBOARD_PMIC8XXX=y
 # CONFIG_INPUT_MOUSE is not set
 CONFIG_INPUT_TOUCHSCREEN=y
-CONFIG_TOUCHSCREEN_LGE_SYNAPTICS=y
-CONFIG_TOUCHSCREEN_CHARGER_NOTIFY=y
+CONFIG_TOUCHSCREEN_ATMEL_MXT=y
 CONFIG_INPUT_MISC=y
 CONFIG_INPUT_PMIC8XXX_PWRKEY=y
 CONFIG_INPUT_KEYCHORD=y
@@ -330,8 +326,6 @@ CONFIG_POWER_SUPPLY=y
 CONFIG_ISL9519_CHARGER=y
 CONFIG_PM8921_CHARGER=y
 CONFIG_PM8921_BMS=y
-CONFIG_WIRELESS_CHARGER=y
-CONFIG_BQ51051B_CHARGER=y
 CONFIG_BATTERY_TEMP_CONTROL=y
 CONFIG_SENSORS_PM8XXX_ADC=y
 CONFIG_THERMAL=y
@@ -360,14 +354,15 @@ CONFIG_USB_VIDEO_CLASS=y
 # CONFIG_USB_GSPCA is not set
 CONFIG_V4L_PLATFORM_DRIVERS=y
 CONFIG_MSM_CAMERA_V4L2=y
-CONFIG_IMX111=y
-CONFIG_IMX119=y
-CONFIG_MSM_CAMERA_FLASH_LM3559=y
+CONFIG_IMX135=y
+CONFIG_OV2720=y
 CONFIG_MSM_CAMERA_SENSOR=y
 CONFIG_MSM_EEPROM=y
 CONFIG_MSM_GEMINI=y
 # CONFIG_QUP_EXCLUSIVE_TO_CAMERA is not set
 CONFIG_MSM_CSI20_HEADER=y
+CONFIG_RADIO_IRIS=y
+CONFIG_RADIO_IRIS_TRANSPORT=y
 CONFIG_ION=y
 CONFIG_ION_MSM=y
 CONFIG_MSM_KGSL=y
@@ -385,11 +380,11 @@ CONFIG_FB_MSM_NO_MDP_PIPE_CTRL=y
 CONFIG_FB_MSM_OVERLAY0_WRITEBACK=y
 CONFIG_FB_MSM_OVERLAY1_WRITEBACK=y
 CONFIG_FB_MSM_WRITEBACK_MSM_PANEL=y
-CONFIG_FB_MSM_MIPI_LGIT_VIDEO_WXGA_PT_PANEL=y
+CONFIG_FB_MSM_MIPI_HITACHI_CMD_720P_PT_PANEL=y
 CONFIG_FB_MSM_HDMI_MSM_PANEL=y
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
 # CONFIG_LCD_CLASS_DEVICE is not set
-CONFIG_BACKLIGHT_LM3530=y
+CONFIG_LEDS_LM3530=y
 CONFIG_SOUND=y
 CONFIG_SND=y
 CONFIG_SND_DYNAMIC_MINORS=y
@@ -451,7 +446,6 @@ CONFIG_LEDS_PM8XXX=y
 CONFIG_LEDS_TRIGGERS=y
 CONFIG_LEDS_TRIGGER_HEARTBEAT=y
 CONFIG_SWITCH=y
-CONFIG_SWITCH_FSA8008=y
 CONFIG_RTC_CLASS=y
 # CONFIG_RTC_DRV_MSM is not set
 CONFIG_RTC_DRV_PM8XXX=y
